Fixed image margin on mobile

--- a/src/components/organisms/HomeBanner/homeBanner.scss
+++ b/src/components/organisms/HomeBanner/homeBanner.scss
@@ -103,7 +103,7 @@
 
   .homeBanner__left__bannerImg {
     margin-left: 0px;
-    transform: translateX(0px);
+    transform: translateX(0px) !important;
     width: 95%;
   }
   .homeBanner__left {
